# ReadSentimentTikTok

./: README.md  example_batch_analysis.py  process_watch_history.py  pyproject.toml  requirements.txt
data/: Watch History.txt
